--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
 }
+.content {
 
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
